change questions wording

--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -706,7 +706,7 @@
           <div class="column-half">
             <div id="chart-pie-afrobarometer-access_to_information"
                  data-stat-type="percentage"
-                 data-chart-title="Access to information: land ownership"
+                 data-chart-title="How easy is it to access information on land ownership?"
                  data-source-link="http://afrobarometer.org/publications/south-africa-summary-results-2018"
                  data-source-title="Afrobarometer Round 7: Survey, 2018"></div>
           </div>
@@ -729,7 +729,7 @@
           <div class="column-half">
             <div id="chart-pie-afrobarometer-allow_farmers_retain_land_ownership"
                  data-stat-type="percentage"
-                 data-chart-title="The government should allow farmers to retain ownership of land on which their labourers live?"
+                 data-chart-title="Should the government allow farmers to retain ownership of land on which their labourers live?"
                  data-source-link="http://afrobarometer.org/publications/south-africa-summary-results-2018"
                  data-source-title="Afrobarometer Round 7: Survey, 2018"></div>
           </div>
@@ -739,7 +739,7 @@
           <div class="column-half">
             <div id="chart-pie-afrobarometer-land_acquisation_challenges"
                  data-stat-type="percentage"
-                 data-chart-title="Greatest challenge to acquire land today?"
+                 data-chart-title="What is the greatest challenge to acquiring land today?"
                  data-source-link="http://afrobarometer.org/publications/south-africa-summary-results-2018"
                  data-source-title="Afrobarometer Round 7: Survey, 2018"></div>
           </div>
