--- a/hurumap_ke/templates/profile/profile_detail.html
+++ b/hurumap_ke/templates/profile/profile_detail.html
@@ -1,9 +1,19 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles %}
 
 {% block profile_header_tail %}
-    <div class="column-full">
-        <p class="caption"><strong>Census data:</strong> 2009</p>
+<div class="column-full">
+    <strong>{{ primary_releases.active.name }} {{ primary_releases.active.year }}</strong>
+    {% if primary_releases.other %}
+    <div class="tool-group toggle-sub-group release-list">
+        <a>Change release<i class="fa fa-chevron-circle-down"></i></a>
+        <ul class="sub-group" style="display: none;">
+        {% for release in primary_releases.other %}
+            <li><a href="{{ request.path }}?release={{release.year}}">{{ release.name }} {{ release.year }}</a></li>
+        {% endfor %}
+        </ul>
     </div>
+    {% endif %}
+</div>
 {% endblock %}
 
 {% block profile_detail %}
