--- a/pesayetu/templates/profile/profile_detail.html
+++ b/pesayetu/templates/profile/profile_detail.html
@@ -1,9 +1,21 @@
-{% extends 'profile/profile_detail.html' %} {% block profile_header_tail %}
-    <div class="column-full">
-        <p class="caption"><strong>Budget Allocation data:</strong> 2013, 2014,
-            2015, 2016, 2017</p>
+{% extends 'profile/profile_detail.html' %}
+{% block profile_header_tail %}
+<div class="column-full">
+    <strong>{{ primary_releases.active.name }} {{ primary_releases.active.year }}</strong>
+    {% if primary_releases.other %}
+    <div class="tool-group toggle-sub-group release-list">
+        <a>Change release<i class="fa fa-chevron-circle-down"></i></a>
+        <ul class="sub-group" style="display: none;">
+        {% for release in primary_releases.other %}
+            <li><a href="{{ request.path }}?release={{release.year}}">{{ release.name }} {{ release.year }}</a></li>
+        {% endfor %}
+        </ul>
     </div>
-{% endblock %} {% block profile_detail %}
+    {% endif %}
+</div>
+{% endblock %}
+
+{% block profile_detail %}
 
 
     <article id="budget"
