--- a/hurumap_ug/templates/profile/profile_detail.html
+++ b/hurumap_ug/templates/profile/profile_detail.html
@@ -23,6 +23,10 @@
           <li><a href="#elections2016"><i class="fa fa-check"></i>
             <span>Elections</span></a>
           </li>
+          <ul>
+            <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
+              <span>Afrobarometer</span></a></li>
+          </ul>
         </ul>
       </div>
     </nav>
@@ -173,7 +177,7 @@
   </article>
 
   {% if not afrobarometer.is_missing %}
-    <article>
+    <article id="afrobarometer">
       <header class="section-contents">
         <h1>Afrobarometer Round 7</h1>
       </header>
