sorted all keys

--- a/hurumap_zm/templates/profile/profile_detail.html
+++ b/hurumap_zm/templates/profile/profile_detail.html
@@ -14,6 +14,10 @@
           <li><a href="#demographics"><i class="fa fa-user"></i>
             <span>Demographics</span></a></li>
         </ul>
+        <ul>
+          <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
+            <span>Afrobarometer</span></a></li>
+        </ul>
       </div>
     </nav>
   </div>
