--- a/hurumap_zm/templates/profile/profile_detail.html
+++ b/hurumap_zm/templates/profile/profile_detail.html
@@ -1,6 +1,6 @@
 {% extends 'profile/profile_detail.html' %} {% load humanize lookup staticfiles %}
 
-{% block header_content %}
+{% block secondary_nav %}
   <div class="floating-nav-wrapper" id="sticky-nav">
     <nav class="floating-nav affix-top" data-spy="affix" data-offset-top="197">
       <div class="wrapper clearfix">
@@ -12,17 +12,14 @@
 
         <ul>
           <li><a href="#demographics"><i class="fa fa-user"></i>
-            <span>Demographics</span></a></li>
-        </ul>
-        <ul>
-          <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
-            <span>Afrobarometer</span></a></li>
+            <span>Demographics</span></a>
+          </li>
+            <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
+              <span>Afrobarometer</span></a></li>
         </ul>
       </div>
     </nav>
   </div>
-
-  {{ block.super }}
 {% endblock %}
 
 {% block profile_header_tail %}
@@ -65,7 +62,7 @@
   </article>
 
   {% if not afrobarometer.is_missing %}
-    <article>
+    <article id="afrobaromter">
       <header class="section-contents">
         <h1>Afrobarometer Round 7</h1>
       </header>
