profile and templates changes

--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -583,13 +583,26 @@
             development.
           </aside>
           <div class="column-third">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectarestransferredperprovincebyyear_stat stat_type='number' decimals="-2" %}
           </div>
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-hectarestransferredperprovincebyyear"
                  data-chart-title="Hectares transferred in the Redistributiton Programme from 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
+          </div>
+        </section>
+        <section class="clearfix stat-row">
+          <h2 class="header-for-columns"><a class="permalink"> Redistributed
+            Land Cost <i class="fa fa-link"></i></a></h2>
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandhectares_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandaveragecostperhectares_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandcostinrands_stat stat_type='number' decimals="-2" %}
           </div>
         </section>
         <section class="clearfix stat-row">
@@ -602,17 +615,10 @@
           </div>
         </section>
         <section class="clearfix stat-row">
-          <h2 class="header-for-columns"><a class="permalink"> Redistributed
-            Land Cost <i class="fa fa-link"></i></a></h2>
-          <div class="column-half">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandaveragecostperhectares_stat stat_type='number' decimals="-2" %}
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributeprogrammeprojectsbyyear_stat stat_type='number' decimals="-2" %}
           </div>
-          <div class="column-half">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandcostinrands_stat stat_type='number' decimals="-2" %}
-          </div>
-        </section>
-        <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-redistributeprogrammeprojectsbyyear"
                  data-chart-title="Projects transferred through Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
@@ -620,7 +626,10 @@
           </div>
         </section>
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributeprogrammebeneficiariesbyyear_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-redistributeprogrammebeneficiariesbyyear"
                  data-chart-title="Beneficiaries of Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
@@ -628,7 +637,10 @@
           </div>
         </section>
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributeprogrammehouseholdsbyyear_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-redistributeprogrammehouseholdsbyyear"
                  data-chart-title="Households Benefitted from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
@@ -636,15 +648,21 @@
           </div>
         </section>
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.femalepartybenefited_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-femalepartybenefited"
-                 data-chart-title="Number of female headed households benefited in restitution Programme from 2009/2010 to 2017/2018"
+                 data-chart-title="Number of female benefited from the Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
         </section>
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.disabledpeoplepartybenefited_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-disabledpeoplepartybenefited"
                  data-chart-title="Number of disabled people benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
@@ -652,7 +670,10 @@
           </div>
         </section>
         <section class="clearfix stat-row">
-          <div class="column-full">
+          <div class="column-third">
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.youthpartybenefited_stat stat_type='number' decimals="-2" %}
+          </div>
+          <div class="column-two-thirds">
             <div id="chart-column-redistributionandrestitution-youthpartybenefited"
                  data-chart-title="Number of youth benefited from Redistribution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
@@ -670,11 +691,11 @@
             such as forced removals.
           </aside>
           <div class="column-third">
-            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.redistributedlandinhectares_stat stat_type='number' decimals="-2" %}
+            {% include 'profile/_blocks/_stat_list.html' with stat=redistributionandrestitution.hectaresacquiredrestitution_stat stat_type='number' decimals="-2" %}
           </div>
           <div class="column-two-thirds">
             <div id="chart-histogram-redistributionandrestitution-hectaresacquiredrestitution"
-                 data-chart-title="Hectares Acquired in the Restitution Programme from 2009/2010 to 2017/2018"
+                 data-chart-title="Hectares Acquired in the Restitution Programme in the Financial Year 2009/2010 to 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
@@ -715,7 +736,7 @@
         <section class="clearfix stat-row">
           <div class="column-third">
             <div id="chart-histogram-redistributionandrestitution-financialcompensationrestitution"
-                 data-chart-title="Financial Compensation, Restitution Programme in 2017/2018"
+                 data-chart-title="Financial Compensation in Rands (ZAR), Restitution Programme in 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
@@ -727,7 +748,7 @@
           </div>
           <div class="column-third">
             <div id="chart-histogram-redistributionandrestitution-landcostrestitution"
-                 data-chart-title="Land Cost in Restitution Programme in 2017/2018"
+                 data-chart-title="Land Cost in Restitution Programme in Rands (ZAR) in 2017/2018"
                  data-source-link="http://www.ruraldevelopment.gov.za/publications/evaluation-reports/file/6466"
                  data-source-title="Annual statistical report for selected service delivery programmes of the Department of Rural Development and Land Reform, 2018"></div>
           </div>
