--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -21,18 +21,23 @@
           </div>
           <div class="column-quarter" id="chart-grouped_column-demographics-urban_distribution" data-stat-type="scaled-percentage" data-chart-title="Urban vs rural by sex"></div>
         </section>
-        <section class="clearfix stat-row">
-          <h2 class="header-for-columns">
-            <a class="permalink" href="#age" id="age">Age
-              <i class="fa fa-link"></i></a></h2>
-          <div class="column-quarter">
-            {% include 'profile/_blocks/_stat_list.html' with stat=demographics.median_age stat_type='number' %}
-          </div>
-          <div class="column-half">
-            <div id="chart-histogram-demographics-age_group_distribution" data-stat-type="scaled-percentage" data-chart-title="Population by age range"></div>
-          </div>
-          <div class="column-quarter" id="chart-pie-demographics-age_category_distribution" data-stat-type="percentage" data-chart-title="Population by age category" data-initial-sort="-value"></div>
-        </section>
+        {% if demographics.median_age == 0 %}
+          <section class="clearfix stat-row">
+            <h2 class="header-for-columns">
+              <a class="permalink" href="#age" id="age">Age
+                <i class="fa fa-link"></i></a></h2>
+
+            <div class="column-quarter">
+              {% include 'profile/_blocks/_stat_list.html' with stat=demographics.median_age stat_type='number' %}
+            </div>
+
+
+            <div class="column-half">
+              <div id="chart-histogram-demographics-age_group_distribution" data-stat-type="scaled-percentage" data-chart-title="Population by age range"></div>
+            </div>
+            <div class="column-quarter" id="chart-pie-demographics-age_category_distribution" data-stat-type="percentage" data-chart-title="Population by age category" data-initial-sort="-value"></div>
+          </section>
+        {% endif %} <!-- end if -->
       </div>
     </article>
   {% endif %} <!-- end if -->
@@ -145,63 +150,16 @@
           <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TX_NEW stat_type='number' %}</div>
           <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.CARE_CURR stat_type='number' %}</div>
         </section>
-        {#      these were commented out in the code and there's no description for them #}
-        {#        <section class="clearfix stat-row">#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TB_SCREEN stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TX_CURR stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TB_ART stat_type='number' %}</div>#}
-        {#        </section>#}
-        {#        <section class="clearfix stat-row">#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TX_RET_NUM stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.TX_RET_DEN stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.VMMC_CIRC stat_type='number' %}</div>#}
-        {#        </section>#}
-        {#        <section class="clearfix stat-row">#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.OVC_SERV stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.PP_PREV stat_type='number' %}</div>#}
-        {#          <div class="column-third"> {% include 'profile/_blocks/_stat_list.html' with stat=pepfar.KP_PREV stat_type='number' %}</div>#}
-        {#        </section>#}
       </div>
     </article>
   {% endif %} <!-- end if -->
 
 
-
-  <!--<article id="pupil-teacher-ratios" class="clearfix">-->
-  <!--<header class="section-contents">-->
-  <!--<h1>Pupil teacher ratios</h1>-->
-  <!--</header>-->
-  <!--<div class="section-container">-->
-  <!--<section class="clearfix stat-row">-->
-  <!--<div class="column-half">-->
   <!--{% include 'profile/_blocks/_stat_list.html' with stat=pupil_teacher_ratios.pupil_teacher_ratio stat_type='number' %}-->
   <!--</div>-->
   <!--<div class="column-half">-->
   <!--{% include 'profile/_blocks/_stat_list.html' with stat=pupil_teacher_ratios.pupils_per_textbook stat_type='number' %}-->
-  <!--</div>-->
-  <!--</section>-->
 
-  <!--<section class="clearfix stat-row">-->
-  <!--<div class="column-half"  id="chart-pie-pupil_teacher_ratios-pupil_attendance_rate_dist" data-stat-type="percentage" data-chart-title="Pupil attendance rates in govt schools"></div>-->
-  <!--<div class="column-half"  id="chart-pie-pupil_teacher_ratios-teachers_absent_dist" data-stat-type="percentage" data-chart-title="Average number of teachers absent"></div>-->
-  <!--</section>-->
-
-  <!--</div>-->
-  <!--</article>-->
-
-  <!--<article id="school_amenities" class="clearfix">-->
-  <!--<header class="section-contents">-->
-  <!--<h1>School amenities</h1>-->
-  <!--</header>-->
-  <!--<div class="section-container">-->
-  <!--<section class="clearfix stat-row">-->
-  <!--<div class="column-third"  id="chart-pie-school_amenities-library_data" data-stat-type="percentage" data-chart-title="Schools with libraries"></div>-->
-  <!--<div class="column-third"  id="chart-pie-school_amenities-drinking_water_data" data-stat-type="percentage" data-chart-title="Schools with clean drinking water"></div>-->
-  <!--<div class="column-third"  id="chart-pie-school_amenities-feeding_program_data" data-stat-type="percentage" data-chart-title="Schools with feeding programs"></div>-->
-  <!--</section>-->
-
-  <!--</div>-->
-  <!--</article>-->
 
   {% if not causes_of_death.is_missing %}
     <article id="causes_of_death" class="clearfix">
@@ -524,12 +482,13 @@
       </div>
     </article>
   {% endif %}
-  {% if not airport_types.is_missing %}
+  {% if not airport_types.is_missing or not airport_types %}
     <article id="airport_types" class="clearfix">
       <header class="section-contents">
         <h1>Airports</h1>
       </header>
       <div class="section-container">
+        <code>{{ airport_types }}</code>
         <section class="clearfix stat-row">
           <p class="source">Source:
             <a href="{{ airport_types.source_link }}">{{ airport_types.source_name }}</a>
